# Iris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ability_util.h  app.h  athena_util.h  offsets.h  sdk_util.h  util.h
src/: app.cpp  main.cpp
src/hooks/: ability_hook.cpp  crash_hook.cpp  event_hook.cpp  kick_hook.cpp  listen_hook.cpp  login_hook.cpp  replication_hook.cpp
